@@ -432,6 +432,7 @@ SET(PCRE2_SOURCES
   src/pcre2_convert.c
   src/pcre2_dfa_match.c
   src/pcre2_error.c
+  src/pcre2_extuni.c 
   src/pcre2_find_bracket.c
   src/pcre2_jit_compile.c
   src/pcre2_maketables.c
